changed USER to CUSTOMER

--- a/src/main/resources/templates/User/create.html
+++ b/src/main/resources/templates/User/create.html
@@ -75,7 +75,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                             <option value="ADMIN">Администратор</option>
                                             <option value="PRODUCTION_MANAGER">Мениджър производство</option>
                                             <option value="TRANSPORT_MANAGER">Мениджър транспорт</option>
-                                            <option value="USER">Потребител</option>
+                                            <option value="CUSTOMER">Потребител</option>
                                         </select>
                                     </div>
                                     <div class="text-center">
