--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -57,7 +57,7 @@ document.addEventListener("DOMContentLoaded", function() {
                 </a>
             </li>
             </th:block>
-            <th:block th:if="${session.sessionToken != null and (session.sessionRole == 'PRODUCTION_MANAGER' or session.sessionRole == 'TRANSPORT_MANAGER' or session.sessionRole == 'USER')}">
+            <th:block th:if="${session.sessionToken != null and (session.sessionRole == 'PRODUCTION_MANAGER' or session.sessionRole == 'TRANSPORT_MANAGER' or session.sessionRole == 'CUSTOMER')}">
                 <li class="sidebar-item">
                     <a id="nav-show16" class="sidebar-link" href="/show">
                         <i class="fas fa-box-open align-middle"></i> <span class="align-middle">Кашони</span>
@@ -85,7 +85,7 @@ document.addEventListener("DOMContentLoaded", function() {
                 </a>
             </li>
             </th:block>
-            <th:block th:if="${session.sessionToken != null and (session.sessionRole == 'PRODUCTION_MANAGER' or session.sessionRole == 'TRANSPORT_MANAGER' or session.sessionRole == 'USER')}">
+            <th:block th:if="${session.sessionToken != null and (session.sessionRole == 'PRODUCTION_MANAGER' or session.sessionRole == 'TRANSPORT_MANAGER' or session.sessionRole == 'CUSTOMER')}">
                 <li class="sidebar-item">
                     <a id="nav-show17" class="sidebar-link" href="/plate/show">
                         <i class="fas fa-box-open align-middle"></i> <span class="align-middle">Тарелки</span>
@@ -99,7 +99,7 @@ document.addEventListener("DOMContentLoaded", function() {
                 </a>
             </li>
             </th:block>
-            <th:block th:if="${session.sessionToken != null and (session.sessionRole == 'PRODUCTION_MANAGER' or session.sessionRole == 'TRANSPORT_MANAGER' or session.sessionRole == 'USER')}">
+            <th:block th:if="${session.sessionToken != null and (session.sessionRole == 'PRODUCTION_MANAGER' or session.sessionRole == 'TRANSPORT_MANAGER' or session.sessionRole == 'CUSTOMER')}">
                 <li class="sidebar-item">
                     <a id="nav-show15" class="sidebar-link" href="/product/show">
                         <i class="fas fa-box-open align-middle"></i> <span class="align-middle">Продукти Лукерия</span>
