--- a/src/main/resources/templates/Product/show.html
+++ b/src/main/resources/templates/Product/show.html
@@ -35,7 +35,7 @@ document.addEventListener("DOMContentLoaded", function() {
                 <div class="col-lg-11 mx-auto">
                     <div class="card custom-card-width-lg">
                         <div class="card-header">
-                            <h5 class="card-title mb-0">Налични продукти</h5>
+                            <h5 class="card-title mb-0">Всички продукти</h5>
                         </div>
                         <th:block th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
                             <div class="text-center">
