sending of link for reset working

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -54,6 +54,9 @@ document.addEventListener("DOMContentLoaded", function() {
                                             <div class="d-grid gap-2 mt-3">
                                                <input type="submit" class="btn btn-block btn-primary text-white py-3 px-5" value="Влез">
                                             </div>
+                                            <div class="text-center mt-3">
+                                                <a th:href="@{/user/forgot-password}" class="text-muted" style="font-size: 16px;">Забравена парола?</a>
+                                            </div>
                                         </form>
                                     </div>
                                 </div>
