--- a/src/main/resources/templates/User/reset-password.html
+++ b/src/main/resources/templates/User/reset-password.html
@@ -3,67 +3,108 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reset Password</title>
+  <title>Промяна на парола</title>
   <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <th:block th:insert="~{fragments/links}"></th:block>
 </head>
 <body>
-<div class="container">
-  <h2>Reset Your Password</h2>
-  <form id="resetPasswordForm" th:action="@{/user/reset-password}" method="post" onsubmit="return validatePasswords();">
-    <!-- Скрито поле за токена -->
-    <input type="hidden" name="token" th:value="${token}" />
+<div class="wrapper">
+  <th:block th:insert="~{fragments/header}"></th:block>
 
-    <!-- Поле за новата парола с икона за показване на паролата -->
-    <div class="form-group" style="position: relative;">
-      <label for="password">Enter new password:</label>
-      <input type="password" id="password" name="password" class="form-control" required />
-      <i class="fa fa-eye" id="togglePassword" style="position: absolute; right: 10px; top: 35px; cursor: pointer;" onclick="togglePasswordVisibility('password', this)"></i>
-    </div>
+  <div class="main">
+    <nav class="navbar navbar-expand navbar-light navbar-bg">
+      <a class="sidebar-toggle js-sidebar-toggle">
+        <i class="hamburger align-self-center"></i>
+      </a>
+    </nav>
+    <main class="d-flex w-100">
+      <div class="container d-flex flex-column">
+        <div class="row vh-100">
+          <div class="col-sm-10 col-md-8 col-lg-6 col-xl-5 mx-auto d-table h-100">
+            <div class="d-table-cell align-middle">
+              <div class="text-center mt-4">
+                <p class="lead" style="font-size: 24px;">
+                  Променете вашата парола
+                </p>
+              </div>
 
-    <!-- Поле за потвърждение на новата парола с икона за показване на паролата -->
-    <div class="form-group" style="position: relative;">
-      <label for="confirmPassword">Confirm new password:</label>
-      <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" required />
-      <i class="fa fa-eye" id="toggleConfirmPassword" style="position: absolute; right: 10px; top: 35px; cursor: pointer;" onclick="togglePasswordVisibility('confirmPassword', this)"></i>
-    </div>
+              <div class="card">
+                <div class="card-body">
+                  <div class="m-sm-3">
+                    <form id="resetPasswordForm" th:action="@{/user/reset-password}" method="post" onsubmit="return validatePasswords();">
+                      <input type="hidden" name="token" th:value="${token}" />
 
-    <!-- Контейнер за съобщения за грешки -->
-    <div id="error-message" class="text-danger"></div>
+                      <div class="mb-3" style="position: relative;">
+                        <label for="password" class="form-label" style="font-size: 18px;">Въведете новата парола:</label>
+                        <input type="password" id="password" name="password" class="form-control form-control-lg" required />
+                        <i class="fa fa-eye" id="togglePassword" style="position: absolute; right: 15px; top: 55%; transform: translateY(+45%); cursor: pointer;" onclick="togglePasswordVisibility('password', this)"></i>
+                      </div>
 
-    <button type="submit" class="btn btn-primary mt-3">Reset Password</button>
-  </form>
+                      <div class="mb-3" style="position: relative;">
+                        <label for="confirmPassword" class="form-label" style="font-size: 18px;">Потвърдете новата парола:</label>
+                        <input type="password" id="confirmPassword" name="confirmPassword" class="form-control form-control-lg" required />
+                        <i class="fa fa-eye" id="toggleConfirmPassword" style="position: absolute; right: 15px; top: 55%; transform: translateY(+45%); cursor: pointer;" onclick="togglePasswordVisibility('confirmPassword', this)"></i>
+                      </div>
+
+
+                      <!-- Контейнер за съобщения за грешки -->
+                      <div id="error-message" class="text-danger"></div>
+
+                      <div class="d-grid gap-2 mt-3">
+                        <button type="submit" class="btn btn-block btn-primary text-white py-3 px-5">Запази</button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </div>
 </div>
 
+<script src="/js/app.js"></script>
+
 <script>
-  // Функция за валидация на паролите
-  function validatePasswords() {
-      const password = document.getElementById("password").value;
-      const confirmPassword = document.getElementById("confirmPassword").value;
-      const errorMessage = document.getElementById("error-message");
+  document.addEventListener("DOMContentLoaded", function() {
+      const navbar = document.getElementById("sidebar");
+      console.log(navbar);
+      const toggler = document.querySelector("a.sidebar-toggle");
+      toggler.addEventListener("click", () => {
+      navbar.classList.toggle("collapsed");
+      });
+  });
 
-      if (password !== confirmPassword) {
-          errorMessage.textContent = "Passwords do not match!";
-          return false;
-      }
+function validatePasswords() {
+   const password = document.getElementById("password").value;
+   const confirmPassword = document.getElementById("confirmPassword").value;
+   const errorMessage = document.getElementById("error-message");
 
-      return true;
-  }
+   if (password !== confirmPassword) {
+       errorMessage.textContent = "Passwords do not match!";
+       return false;
+   }
 
-  // Функция за показване/скриване на паролите
-  function togglePasswordVisibility(passwordFieldId, icon) {
-      const passwordField = document.getElementById(passwordFieldId);
+   return true;
+}
 
-      if (passwordField.type === "password") {
-          passwordField.type = "text";
-          icon.classList.remove("fa-eye");
-          icon.classList.add("fa-eye-slash");
-      } else {
-          passwordField.type = "password";
-          icon.classList.remove("fa-eye-slash");
-          icon.classList.add("fa-eye");
-      }
-  }
+// Функция за показване/скриване на паролите
+function togglePasswordVisibility(passwordFieldId, icon) {
+   const passwordField = document.getElementById(passwordFieldId);
+
+   if (passwordField.type === "password") {
+       passwordField.type = "text";
+       icon.classList.remove("fa-eye");
+       icon.classList.add("fa-eye-slash");
+   } else {
+       passwordField.type = "password";
+       icon.classList.remove("fa-eye-slash");
+       icon.classList.add("fa-eye");
+   }
+}
 </script>
 </body>
 </html>
