--- a/src/main/resources/templates/User/reset-password.html
+++ b/src/main/resources/templates/User/reset-password.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Промяна на парола</title>
+  <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <th:block th:insert="~{fragments/links}"></th:block>
