add validation for wrong email address

--- a/src/main/resources/templates/User/forgot-password.html
+++ b/src/main/resources/templates/User/forgot-password.html
@@ -34,6 +34,9 @@
                 <div th:if="${message}" class="alert alert-primary mt-3">
                   <p th:text="${message}"></p>
                 </div>
+                <div th:if="${error}" class="text-danger">
+                  <p th:text="${error}"></p>
+                </div>
               </div>
             </div>
           </div>
