--- a/src/main/resources/templates/CustomPrice/create.html
+++ b/src/main/resources/templates/CustomPrice/create.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
     <!--    LINKS  -->
     <th:block th:insert="~{fragments/links}"></th:block>
@@ -7,17 +8,21 @@
     <title>Персонализирана цена</title>
     <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
     <link href="/css/form.css" rel="stylesheet">
+    <link href="/css/select2.min.css" rel="stylesheet"> <!-- Include Select2 CSS -->
+
 </head>
+
 <script>
-    document.addEventListener("DOMContentLoaded", function() {
+    document.addEventListener("DOMContentLoaded", function () {
         const navbar = document.getElementById("sidebar");
         console.log(navbar);
         const toggler = document.querySelector("a.sidebar-toggle");
         toggler.addEventListener("click", () => {
-        navbar.classList.toggle("collapsed");
+            navbar.classList.toggle("collapsed");
         });
     });
 </script>
+
 <body>
 <div class="wrapper">
     <!--    HEADER  -->
@@ -29,79 +34,64 @@
             </a>
         </nav>
 
-        <div class="main">
-            <main class="content">
-                <div class="d-flex justify-content-center">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="card custom-card-width-lg">
-                                <div class="card-header">
-                                    <h5 class="card-title mb-0">Създай продукт</h5>
+        <main class="content">
+            <div class="form-container">
+                <div class="card custom-card-width-lg">
+                    <div class="card-header">
+                        <h5 class="card-title mb-0">Създай персонализирана цена</h5>
+                    </div>
+                    <div class="card-body">
+                        <form th:action="@{/customerCustomPrice/submit}" method="post" th:object="${customPrice}">
+                            <center>
+                                <div class="form-group">
+                                    <label for="clientId" style="width: 100%">Клиенти:</label>
+                                    <select class="form-select" id="clientId" name="clientId" required>
+                                        <option th:each="client : ${clients}" th:value="${client.id}"
+                                                th:text="${client.businessName}"></option>
+                                    </select>
                                 </div>
-                                <div class="card-body">
-                                    <form th:action="@{/customerCustomPrice/submit}" method="post"
-                                          th:object="${customPrice}">
 
-                                        <div class="form-group" th:if="${clients}">
-                                            <label for="clientId" style="width: 100%;">Клиент:</label>
-                                            <select id="clientId" name="packageId" style="width: 100%;">
-                                                <option th:each="client : ${clients}" th:value="${client.id}" >
-                                                    <!--                                                        th:data-image-url="@{${backendBaseUrl} + '/' + ${package.photo}}" >-->
-                                                    <!--                                                    <img th:src="@{'${backendBaseUrl}' + '/' + ${package.photo}}"  width="50" height="50">-->
-                                                    <span th:text = "${client.businessName}+ ' - ' +${client.englishBusinessName}"></span>
-                                                </option>
-                                            </select>
-                                        </div>
-
-                                        <div class="form-group" th:if="${products}">
-                                            <label for="productId" style="width: 100%;">Продукт:</label>
-                                            <select id="productId" name="packageId" style="width: 100%;">
-                                                <option th:each="product : ${products}" th:value="${product.id}">
-                                                    <!--                                                        th:data-image-url="@{${backendBaseUrl} + '/' + ${package.photo}}" >-->
-                                                    <!--                                                    <img th:src="@{'${backendBaseUrl}' + '/' + ${package.photo}}"  width="50" height="50">-->
-                                                    <span th:text = "${product.productCode}"></span>
-                                                </option>
-                                            </select>
-                                        </div>
-
-                                        <div class="form-group">
-                                            <label for="price">Цена</label>
-                                            <input type="number" class="form-control" id="price" name="price"
-                                                   th:field="*{price}" required min="0" step="0.01"
-                                                   th:value="${product.price}">
-                                        </div>
-
-                                <div class="text-center">
-                                    <button type="submit" class="btn btn-primary">Създай</button>
+                                <div class="form-group">
+                                    <label for="productId" style="width: 100%">Продукти:</label>
+                                    <select class="form-select" id="productId" name="productId" required>
+                                        <option th:each="product : ${products}" th:value="${product.id}"
+                                                th:text="${product.productCode}"></option>
+                                    </select>
                                 </div>
-                                </form>
+
+                                <div class="form-group">
+                                    <label for="price">Цена</label>
+                                    <input type="number" class="form-control" id="price" name="price"
+                                           th:field="*{price}"
+                                           required min="0" step="0.01"/>
+                                </div>
+                            </center>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary">Създай</button>
                             </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
-        </div>
+            </div>
         </main>
     </div>
 </div>
-</div>
-<script src="/js/app.js"></script>
+
+<!-- Include jQuery and Select2 JS -->
+<script src="/js/jquery.min.js"></script>
+<script src="/js/select2.min.js"></script>
 <script>
-    $(document).ready(function() {
-        $('#packageId').select2({
-            templateResult: formatState
+    $(document).ready(function () {
+        $('#clientId').select2({
+            width: 'resolve', // Make sure the select fits the form width
+            placeholder: "Изберете клиент"
+        });
+        $('#productId').select2({
+            width: 'resolve',
+            placeholder: "Изберете продукт"
         });
     });
-
-    function formatState(state) {
-        if (!state.id) {
-            return state.text;
-        }
-        var imageUrl = state.element.getAttribute('data-image-url');
-        var $state = $(
-            '<span><img src="' + imageUrl + '" width="50" height="50" /> ' + state.text + '</span>'
-        );
-        return $state;
-    }
 </script>
 </body>
+
 </html>
