--- a/src/main/resources/templates/camera.html
+++ b/src/main/resources/templates/camera.html
@@ -59,11 +59,10 @@
 <body>
 <h1>Scan EAN-13 Barcode</h1>
 
-<!-- Контейнер за инпут полето и бутона с иконка на камера -->
 <form method="POST" action="/submit-string">
     <div class="input-container">
         <input type="text" id="inputText" name="inputText" placeholder="Enter barcode manually" required>
-        <button id="toggleCamera" type="button"><i class="fas fa-camera"></i></button> <!-- Бутонът с иконката -->
+        <button id="toggleCamera" type="button"><i class="fas fa-camera"></i></button>
     </div>
     <button type="submit">Submit</button>
 </form>
