barcodeScanner V3.0 The Scanner is added in Products show for searching by barcode

--- a/src/main/resources/templates/Product/show.html
+++ b/src/main/resources/templates/Product/show.html
@@ -7,6 +7,10 @@
     <title>Продукти Лукерия</title>
     <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
     <link href="/css/show.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
+    <link rel="stylesheet" href="/css/modalStyles.css"> <!-- Нов CSS файл за модалния прозорец -->
+    <link rel="stylesheet" href="/css/videoStyles.css"> <!-- Нов CSS файл за видео стиловете -->
 </head>
 <script>
 document.addEventListener("DOMContentLoaded", function() {
@@ -74,6 +78,16 @@ document.addEventListener("DOMContentLoaded", function() {
                                         <label>Резултати от търсенето: <span id="resultsCount2"></span></label>
                                     </div>
                                 </div>
+                                <div class="col">
+                                    <div class="input-container">
+                                        <input type="text" id="searchInputBarcode" class="form-control" placeholder="Търсене по Баркод">
+                                        <button id="toggleCamera" type="button" class="btn"><i class="fas fa-barcode"></i></button>
+                                    </div>
+                                    <br>
+                                    <div class="alert alert-primary" role="alert">
+                                        <label>Резултати от търсенето: <span id="resultsCountBarcode"></span></label>
+                                    </div>
+                                </div>
                             </div>
                             <div class="table-responsive">
                                 <table class="table">
@@ -134,10 +148,30 @@ document.addEventListener("DOMContentLoaded", function() {
                     </div>
                 </div>
             </div>
+            <div id="cameraModal" class="modal" >
+                <div class="modal-content">
+                    <span class="close" id="closeModal">&times;</span>
+                    <video id="modalVideo" width="0" height="0" autoplay></video>
+                </div>
+            </div>
         </main>
     </div>
 </div>
 <script src="/js/app.js"></script>
+
+
+<script src="/js/barcodeScanner.js"></script>
+<script src="/js/barcodeScannerCamera.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        new BarcodeScannerCamera({
+            videoElementId: 'modalVideo',
+            inputElementId: 'searchInputBarcode',
+            toggleButtonId: 'toggleCamera',
+            modalId: 'cameraModal'
+        });
+    });
+</script>
 <script>
 $(document).ready(function() {
 $('#packageId').select2();
