--- a/src/main/resources/templates/Product/show.html
+++ b/src/main/resources/templates/Product/show.html
@@ -9,8 +9,8 @@
     <link href="/css/show.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
-    <link rel="stylesheet" href="/css/modalStyles.css"> <!-- Нов CSS файл за модалния прозорец -->
-    <link rel="stylesheet" href="/css/videoStyles.css"> <!-- Нов CSS файл за видео стиловете -->
+    <link rel="stylesheet" href="/css/modalStyles.css">
+    <link rel="stylesheet" href="/css/videoStyles.css">
 </head>
 <script>
 document.addEventListener("DOMContentLoaded", function() {
@@ -41,27 +41,20 @@ document.addEventListener("DOMContentLoaded", function() {
                         <div class="card-header">
                             <h5 class="card-title mb-0">Всички продукти</h5>
                         </div>
-                        <th:block th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
-                            <div class="text-center">
+                        <div style="display: flex; justify-content: center; gap: 10px;">
+                            <th:block th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
                                 <a href="/product/create" class="btn btn-primary">Добави нов Продукт</a>
-                            </div>
-                            <br>
-                        </th:block>
-                        <th:block th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
-                            <div class="text-center">
+                            </th:block>
+
+                            <th:block th:if="${session.sessionToken != null and (session.sessionRole == 'ADMIN' or session.sessionRole == 'PRODUCTION_MANAGER')}">
                                 <a href="/product/produce" class="btn btn-warning">Производство на продукт</a>
-                            </div>
-                        </th:block>
-                        <th:block
-                                th:if="${session.sessionToken != null and session.sessionRole == 'PRODUCTION_MANAGER'}">
-                            <div class="text-center">
-                                <a href="/product/produce" class="btn btn-warning">Производство на продукт</a>
-                            </div>
-                        </th:block>
-                        <div class="text-center">
-                            <a href="/product/available-products" style="margin: 20px;" class="btn btn-success">Налични
-                                продукти</a>
+                            </th:block>
+
+                            <th:block>
+                                <a href="/product/available-products" class="btn btn-success">Налични продукти</a>
+                            </th:block>
                         </div>
+
                         <div class="card-body">
                             <div class="row mb-3">
                                 <div class="col">
