--- a/src/main/resources/templates/User/profile.html
+++ b/src/main/resources/templates/User/profile.html
@@ -92,6 +92,16 @@
 </div>
 <script src="/js/app.js"></script>
 <script>
+
+    document.addEventListener("DOMContentLoaded", function() {
+    const navbar = document.getElementById("sidebar");
+    console.log(navbar);
+    const toggler = document.querySelector("a.sidebar-toggle");
+    toggler.addEventListener("click", () => {
+    navbar.classList.toggle("collapsed");
+    });
+});
+
     document.getElementById('searchInput2').addEventListener('input', function () {
     var input, filter, table, tr, td, i, txtValue;
     input = document.getElementById('searchInput2');
